SPDI-33252 Livy add -XX:MaxDirectMemorySize according to memory overhead.